--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="">Download Excursion (Coming soon!)</a></p>
-    <video autoplay loop src="./resources/videos/excursion.mp4">
+    <p>
+      <video autoplay loop src="./resources/videos/excursion.mp4">
       Video of the excursion app
-    </video>
+      </video>
+    </p>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="./resources/images/camp.jpg" alt="camp by night">
-    <br />
-    <br />
-    <img src="./resources/images/phone.png" alt="phone icon">
+    <p><img src="./resources/images/camp.jpg" alt="camp by night"></p>
+    <p><img src="./resources/images/phone.png" alt="phone icon"></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="">Download Excursion (Coming soon!)</a></p>
     <p style="text-align:right;">&copy; Excursion</p>
